<resources>

    <!-- Naming convention: (how it will be used)_(description) -->
    <string name="app_name">Shoot The Breeze</string>
    <string name="base_url">https://team-2-tcss-450-backend.herokuapp.com/</string>

    <!--    <string name="base_url">http://localhost:5000/</string>-->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_general">Error</string>
    <string name="error_email_two_chars">Email must include more than 2 characters</string>
    <string name="error_email_character">Email must contain a \'@\'</string>
    <string name="error_email_whitespace">Email must not include whitespace</string>
    <string name="error_password_one_char">Password must include more than 1 character</string>
    <string name="error_password_match">Passwords must match</string>
    <string name="error_password_seven_chars">Password must include more than 7 characters</string>
    <string name="error_password_whitespace">Password must not include whitespace</string>
    <string name="error_password_digit">Password must include a digit</string>
    <string name="error_password_special">Password must include a special character</string>
    <string name="error_password_lower">Password must include a lower case letter</string>
    <string name="error_password_upper">Password must include a capital letter</string>
    <string name="error_username_two_chars">Username must include more than 2 characters</string>
    <string name="error_username_whitespace">Username must not include whitespace</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_user">Username</string>
    <string name="hint_forgot">Email</string>
    <string name="hint_contacts">Edit Contacts</string>

    <string name="label_register">Register</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_home">Home</string>
    <string name="label_chat">Chat</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_weather">Weather</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_verify_email">Please Verify Your Email</string>
    <string name="label_continue">Continue</string>
    <string name="label_delete">Delete</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_add_people">Add People</string>
    <string name="label_edit">Edit</string>
    <string name="label_new_chat">New Chat</string>
    <string name="label_create_room">Create Room</string>
    <string name="label_delete_rooms">Select Chat Rooms To Delete</string>



    <string name="toggle_theme">Toggle Theme</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>

    <string name="orange_theme_light">Orange Theme Light</string>
    <string name="orange_theme_dark">Orange Theme Dark</string>
    <string name="blue_theme_light">Blue Theme Light</string>
    <string name="blue_theme_dark">Blue Theme Dark</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>


    <string name="text_city">city</string>
    <string name="text_date">date</string>
    <string name="text_zip">zip:</string>
    <string name="enter_zip">Enter Zipcode</string>
    <string name="button_go">Go</string>
    <string name="text_current_weather">CURRENT WEATHER</string>
    <string name="text_seven_day_forecast">7 DAY WEATHER FORECAST</string>
    <string name="text_weather_wind">Wind:</string>
    <string name="text_weather_humidity">Humidity:</string>
    <string name="text_weather_precipitation">Precipitation:</string>
    <string name="ok">ok</string>
    <string name="dialog_message">Contact request sent</string>
    <string name="title_activity_maps">Map</string>

</resources>
