<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_toggleTheme"
        android:orderInCategory="100"
        android:title="@string/toggle_theme"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/themeOrangeLight"
                android:title="@string/orange_theme_light"/>
            <item
                android:id="@+id/themeOrangeDark"
                android:title="@string/orange_theme_dark"/>
            <item
                android:id="@+id/themeBlueLight"
                android:title="@string/blue_theme_light"/>
            <item
                android:id="@+id/themeBlueDark"
                android:title="@string/blue_theme_dark"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_changePassword"
        android:orderInCategory="100"
        android:title="@string/change_password"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_signOut"
        android:orderInCategory="100"
        android:title="@string/sign_out"
        app:showAsAction="never" />
</menu>