<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.uw.tcss450.chatapp.ui.home.SuccessFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_success" />
    <fragment
        android:id="@+id/navigation_weather"
        android:name="edu.uw.tcss450.chatapp.ui.weather.ForecastFragment"
        android:label="@string/label_weather"
        tools:layout="@layout/fragment_forecast" />
    <fragment
        android:id="@+id/navigation_contacts"
        android:name="edu.uw.tcss450.chatapp.ui.contacts.ContactsFragment"
        android:label="@string/label_contacts"
        tools:layout="@layout/fragment_contacts" >
        <action
            android:id="@+id/action_navigation_contacts_to_editContactsFragment"
            app:destination="@id/editContactsFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat"
        android:name="edu.uw.tcss450.chatapp.ui.chat.ChatListFragment"
        android:label="@string/label_chat"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_navigation_chat_to_chatRoomFragment2"
            app:destination="@id/navigation_chat_room" />
        <action
            android:id="@+id/action_navigation_chat_to_contactJoinFragment"
            app:destination="@id/navigation_contacts_join"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chat_room"
        android:name="edu.uw.tcss450.chatapp.ui.chat.chat_room.ChatRoomFragment"
        android:label="@string/label_chat"
        tools:layout="@layout/fragment_chat_room">
        <argument
            android:name="chatId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/navigation_contacts_join"
        android:name="edu.uw.tcss450.chatapp.ui.chat.contact_join.ContactJoinFragment"
        android:label="Add Contacts" >
        <argument
            android:name="creatingRoom"
            app:argType="boolean" />
        <argument
            android:name="chatId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="edu.uw.tcss450.chatapp.ui.settings.ChangePasswordFragment"
        android:label="fragment_change_password"
        tools:layout="@layout/fragment_change_password" >
        <action
            android:id="@+id/action_changePasswordFragment_to_changePassConfirmFragment"
            app:destination="@id/changePassConfirmFragment" />
    </fragment>
    <fragment
        android:id="@+id/changePassConfirmFragment"
        android:name="edu.uw.tcss450.chatapp.ui.settings.ChangePassConfirmFragment"
        android:label="fragment_change_pass_confirm"
        tools:layout="@layout/fragment_change_pass_confirm" />
    <fragment
        android:id="@+id/editContactsFragment"
        android:name="edu.uw.tcss450.chatapp.ui.contacts.EditContactsFragment"
        android:label="Edit Contacts"
        tools:layout="@layout/fragment_contacts_edit"/>
</navigation>