<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.weather.ForecastFragment">

    <LinearLayout
        android:id="@+id/today_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="7dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_current_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_current_weather"
            android:textSize="24sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/temp_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/today_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_weather"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher">

            </ImageView>

            <TextView
                android:id="@+id/text_temperature"
                android:layout_width="140dp"
                android:layout_height="80dp"
                android:layout_marginLeft="8dp"
                android:text="14 C"
                android:textSize="50sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:layout_marginBottom="301dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_five_day_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_five_day_forecast"
            android:textSize="24sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/text_wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temp_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/text_weather_wind" />

    <TextView
        android:id="@+id/text_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_wind"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/text_weather_humidity" />

    <TextView
        android:id="@+id/text_precipitation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_humidity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/text_weather_precipitation" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"/>

</RelativeLayout>